[package]
name = "tokval"
version = "0.1.0"
edition = "2018"


[dependencies]
crossbeam = "0.8"
anyhow = "1.0"
num_cpus = "1.0"
regex = "1.5"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
tokio = "1"
clap = "~2.33"
rand = "0.8.0"
log = "0.4"
simplelog = "^0.10.0"